--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                             <a href="./images/CV-VKJ" download="CV_Vishal_Kr_Jamuar"><button class="btn btn-secondary">DOWNLOAD CV</button></a>
                             <button class="btn btn-secondary lookcvbtn">LOOK AT MY CV</button>
                             <div class="look-at-cv">
-                                <img class="CV-VKJ" src="./images/CV-VKJ.PNG" alt="">
+                                <embed src="./images/CV-VKJ.pdf" type="application/pdf" width="80%" height="600px">
+                                
                                 
                                 <button class="times2"><img src="./images/times.png" alt=""></button>
                             </div>
