--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     <h6><i>Unavailable at this moment</i></h6>
                 </div>
             </div>
-            <form action="contact-form.php">
+            <form method="POST" action="contact-form.php">
                 <div class="input-wrap">
                     <input name="name" type="text" placeholder="Your Name*">
                     <input name="email" type="text" placeholder="Your Email*">
