--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="services" class="services">
         <div class="container">
             <h1 class="section-heading"><span>My</span> Works</h1>
-            <p>Look at these cool and interesting core projects</p>
+            <p>Look at these cool and interesting core projects. Do click on "see details" </p>
             <div class="card-wrapper">
                 <div class="card">
                     <img class="TOicon" src="./images/TO1.jpg" height="100px" width="100px" alt="">
@@ -308,7 +308,7 @@
     <section id="work" class="work">
         <div class="container">
             <h1 class="section-heading"><span>My</span> Interests</h1>
-            <p>These are the things I am interested in and would love to work on. Hover and click to now about these topics.</p>
+            <p>These are the things I am interested in and would love to work on. Hover and click to know about these topics.</p>
             <div class="card-wrapper">
                 <div id="gen" class="card">
                     <div class="overlay">
