--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="services" class="services">
         <div class="container">
             <h1 class="section-heading"><span>My</span> Works</h1>
-            <p>Look at these cool and interesting core projects</p>
+            <p>Look at these cool and interesting core projects. Do click on "see details"</p>
             <div class="card-wrapper">
                 <div class="card">
                     <img class="TOicon" src="./images/TO1.jpg" height="100px" width="100px" alt="">
@@ -152,7 +152,7 @@
                             <div class="card">
                                 <div class="overlay">
                                     <span>Category</span>
-                                    <h4 >Wheele</h4>
+                                    <h4 >Wheel</h4>
                                     
                                 </div>
                                 <img src="./images/to6.png" alt="">
@@ -181,11 +181,11 @@
                 <div class="card">
                     <img class="bridgeicon" src="./images/bridge.png" height="100px" width="100px" alt="">
                     <h2>Moving Support Bridge</h2>
-                    <p>Applied for a patent of novel lightweight bridge inte-rconvertible to ladder for indian army.</p>
+                    <p>Applied for a PATENT of novel lightweight bridge inter-convertible to ladder for Indian Army.</p>
+                    <p> Patent Application Number: 202111022676</p>
                     <h5 class="bridge">See Details</h5>
                     <div class="bridge-proj">
-                        <img class="bridgevid" src="./images/bridgevid.gif" alt="">
-                        <img class="laddervid" src="./images/laddervid.gif" alt="">
+                        <img class="bridgevid" src="./images/disclose.PNG" alt="">
                         <a href="#bridge"><img class="bridge-times" src="./images/times.png" alt=""></a>
 
                     </div>
@@ -240,7 +240,7 @@
                         <img class="cad1" src="./images/cad1.PNG" alt="">
                         <img class="cad2" src="./images/cad2.PNG" alt="">
                         <img class="cad5" src="./images/cad5.PNG" alt="">
-                        <img class="cad4" src="./images/cad4.PNG" alt="">
+                        
                         <img class="cad3" src="./images/cad3.PNG" alt="">
                         <a href="#cad"><img class="cad-times" src="./images/times.png" alt=""></a>
 
@@ -308,7 +308,7 @@
     <section id="work" class="work">
         <div class="container">
             <h1 class="section-heading"><span>My</span> Interests</h1>
-            <p>These are the things I am interested in and would love to work on. Hover and click to now about these topics.</p>
+            <p>These are the things I am interested in and would love to work on. Hover and click to know about these topics.</p>
             <div class="card-wrapper">
                 <div id="gen" class="card">
                     <div class="overlay">
